--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Update apt cache
   apt: update_cache=yes
   become: yes
-  become_user: sudo
+  become_user: root
 
 - name: Install basic packages
   apt: "pkg={{item}} state=installed"
@@ -15,13 +15,13 @@
     - wget
     - iotop
   become: yes
-  become_user: sudo
+  become_user: root
 
 - include: vim.yml
 
 #- include: tmux.yml
 
-- include: git.yml
+#- include: git.yml
 
 - include: fish.yml
 
