Adding home variable & root tag

--- a/tasks/fish.yml
+++ b/tasks/fish.yml
@@ -3,5 +3,5 @@
 - name: Clone shaka's fish-config repo
   git:
     repo: git://github.com/hugoShaka/fish-config.git
-    dest: ~/.config/fish/
+    dest: "{{shakaServer_home}}/.config/fish/"
 
