--- a/tasks/git.yml
+++ b/tasks/git.yml
@@ -3,4 +3,4 @@
 - name: Copying .gitconfig into home
   template:
     src: gitconfig.j2
-    dest: ~/.gitconfig
+    dest: "{{shakaServer_home}}/.gitconfig"
